5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1575_2896.log
== TEST (2019-03-14 11:26:28) 
-- CODE:
# Use este codigo como ponto de partida

input()
var = 

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:27:43) 
-- CODE:
# Use este codigo como ponto de partida

var =input("Digite o nome: ")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:28:14) 
-- CODE:
# Use este codigo como ponto de partida

var =input("Digite o nome: ")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.148596
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
